# vectorfont

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: StandardProjectSettings.cmake
include/vectorfont/: hershey.h  rectangle.h  vectorfont.h  xml.h
src/tests/: CMakeLists.txt  rectangle.cpp  test1.cpp
src/vectorfont/: hershey.cpp
